--- a/index.html
+++ b/index.html
@@ -51,103 +51,67 @@
           />
         </video>
         <div class="container hero-container">
-          <div class="hero-content-wrap">
-            <h1 class="hero-title">
-              Slip din indre artist <span>på vårt koselige sted</span>
-            </h1>
-            <button class="hero-contact-form" type="button">CONTACT US</button>
+          <div class="heading-wrap">
+            <h1 class="hero-title">Slip din indre artist</h1>
+            <div class="hero-heading-line"></div>
+          </div>
+          <h2>på vårt koselige sted</h2>
+        </div>
+      </section>
+      <section class="works">
+        <div class="container">
+          <div class="works-top">
+            <div class="works-heading-wrap">
+              <div class="works-heading-line"></div>
+              <h2 class="works-title">Familievennlig keramikkmaleri</h2>
+            </div>
+            <div class="works-content-wrap">
+              <div class="works-img-wrap">
+                <img
+                  src="./img/photo_2025-02-19_17-28-58-1.jpg"
+                  alt="Painting"
+                />
+              </div>
+              <div class="works-text-wrap">
+                <p class="works-text">
+                  Nyt keramikkmaling og kreative øyeblikk på Artkafe Artkafe
+                  kombinerer kunst og godt selskap for å skape unike kreative
+                  øyeblikk som får alle til å snakke og komme tilbake for mer.
+                  Velg mellom 50 + allerede laget gjenstander å male og
+                  dekorere. Len deg tilbake og nyt te og kaffe mens du maler med
+                  familie og venner.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="works-bottom">
+            <div class="works-heading-wrap">
+              <h2 class="works-title">Unik kreativ opplevelse</h2>
+              <div class="works-heading-line"></div>
+            </div>
+            <div class="works-content-wrap">
+              <div class="works-text-wrap">
+                <p class="works-text">
+                  Vi ønsker å tilby en opplevelse som fremmer tilknytning og
+                  kreativitet. En aktivitet som oppmuntrer til kvalitetstid
+                  gjennom kreativ utforskning. Vårt fokus er å løfte, styrke og
+                  utdanne de som jobber med oss ​​til å strebe etter ikke annet
+                  enn fortreffelighet i service og levering. Vår visjon er å
+                  være best på kundeopplevelser.
+                </p>
+              </div>
+              <div class="works-img-wrap">
+                <img
+                  src="./img/photo_2025-02-19_17-28-58-1.jpg"
+                  alt="Painting"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </section>
-      <!-- <section class="hero">
-        <div class="container">
-          <div class="hero-container">
-            <h1 class="hero-title">
-              Treat yourself or a loved one to our finest ingredients for a
-              moment of pure delight!
-            </h1>
-            <div class="hero-buttons">
-              <button type="button" class="hero-btn">Buy now</button>
-              <a href="" class="hero-made-link">How it’s made</a>
-              <a href="" class="hero-scroll-link">scroll down</a>
-            </div>
-          </div>
-        </div>
-      </section> -->
-
-      <!-- <section class="made">
-        <div class="container">
-          <h2 class="made-title title">hOW IT’S <span>made?</span></h2>
-          <div class="made-wrapper">
-            <picture>
-              <source
-                media="(min-width: 1166px )"
-                srcset="./images/made-img.jpeg 1x, ./images/made-img-2x.jpeg 2x"
-              />
-              <source
-                media="(min-width: 768px )"
-                srcset="
-                  ./images/made-img-tab.jpeg    1x,
-                  ./images/made-img-tab-2x.jpeg 2x
-                "
-              />
-              <source
-                media="(max-width: 767px )"
-                srcset="
-                  ./images/made-img-mob.jpeg    1x,
-                  ./images/made-img-mob-2x.jpeg 2x
-                "
-              />
-              <img
-                class="made-image"
-                src="./images/made-img-tab.jpeg"
-                alt="liquid chocolate"
-                width="614"
-              />
-            </picture>
-
-            <div class="made-content">
-              <h3 class="made-subtitle">
-                Try our chocolates today and discover the perfect balance of
-                flavor
-              </h3>
-              <ul class="made-list">
-                <li class="made-item">
-                  <p class="made-item-text">
-                    Heat the milk in a saucepan without bringing it to a boil.
-                    Add sugar and cocoa powder.
-                  </p>
-                </li>
-                <li class="made-item">
-                  <p class="made-item-text">
-                    At the same time, prepare a water bath. Melt the butter on
-                    it.
-                  </p>
-                </li>
-                <li class="made-item">
-                  <p class="made-item-text">
-                    "Mix" the milk mixture and already liquid butter. Mix
-                    thoroughly with a silicone spatula so that the mass becomes
-                    uniform and silky.
-                  </p>
-                </li>
-                <li class="made-item">
-                  <p class="made-item-text">
-                    Heat the mixture over low heat, letting it barely boil.
-                  </p>
-                </li>
-                <li class="made-item">
-                  <p class="made-item-text">
-                    Pour the chocolate into special containers (can be replaced
-                    with ice molds). Allow to cool and harden.
-                  </p>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section> -->
     </main>
-    <footer></footer>
+    <footer class="footer"></footer>
+    <script type="module" src="./js/task-1.js"></script>
   </body>
 </html>
