--- a/index.html
+++ b/index.html
@@ -51,28 +51,39 @@
           />
         </video>
         <div class="container hero-container">
-          <div class="heading-wrap">
-            <h1 class="hero-title">Slip din indre artist</h1>
-            <div class="hero-heading-line"></div>
+          <div class="hero-text-content">
+            <div class="heading-wrap">
+              <h1 class="hero-title">Slip din indre artist</h1>
+              <div class="hero-heading-line"></div>
+            </div>
+            <h2>på vårt koselige sted</h2>
           </div>
-          <h2>på vårt koselige sted</h2>
+          <a class="hero-link" href="#">Se katalog</a>
         </div>
       </section>
       <section class="works">
-        <div class="container">
-          <div class="works-top">
-            <div class="works-heading-wrap">
-              <div class="works-heading-line"></div>
-              <h2 class="works-title">Familievennlig keramikkmaleri</h2>
-            </div>
-            <div class="works-content-wrap">
-              <div class="works-img-wrap">
-                <img
-                  src="./img/photo_2025-02-19_17-28-58-1.jpg"
-                  alt="Painting"
-                />
-              </div>
+        <div class="container works-container">
+          <div class="works-left">
+            <div class="works-overlay-left">
+              <img src="./img/photo_2025-02-19_17-46-38-3.jpg" alt="Painting" />
               <div class="works-text-wrap">
+                <h3 class="works-title">Unik kreativ opplevelse</h3>
+                <p class="works-text">
+                  Vi ønsker å tilby en opplevelse som fremmer tilknytning og
+                  kreativitet. En aktivitet som oppmuntrer til kvalitetstid
+                  gjennom kreativ utforskning. Vårt fokus er å løfte, styrke og
+                  utdanne de som jobber med oss ​​til å strebe etter ikke annet
+                  enn fortreffelighet i service og levering. Vår visjon er å
+                  være best på kundeopplevelser.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="works-right">
+            <div class="works-overlay-right">
+              <img src="./img/photo_2025-02-19_17-28-58-1.jpg" alt="Painting" />
+              <div class="works-text-wrap">
+                <h3 class="works-title">Familievennlig keramikkmaleri</h3>
                 <p class="works-text">
                   Nyt keramikkmaling og kreative øyeblikk på Artkafe Artkafe
                   kombinerer kunst og godt selskap for å skape unike kreative
@@ -83,30 +94,7 @@
                 </p>
               </div>
             </div>
-          </div>
-          <div class="works-bottom">
-            <div class="works-heading-wrap">
-              <h2 class="works-title">Unik kreativ opplevelse</h2>
-              <div class="works-heading-line"></div>
-            </div>
-            <div class="works-content-wrap">
-              <div class="works-text-wrap">
-                <p class="works-text">
-                  Vi ønsker å tilby en opplevelse som fremmer tilknytning og
-                  kreativitet. En aktivitet som oppmuntrer til kvalitetstid
-                  gjennom kreativ utforskning. Vårt fokus er å løfte, styrke og
-                  utdanne de som jobber med oss ​​til å strebe etter ikke annet
-                  enn fortreffelighet i service og levering. Vår visjon er å
-                  være best på kundeopplevelser.
-                </p>
-              </div>
-              <div class="works-img-wrap">
-                <img
-                  src="./img/photo_2025-02-19_17-28-58-1.jpg"
-                  alt="Painting"
-                />
-              </div>
-            </div>
+            <a class="works-link" href="#">Galeri</a>
           </div>
         </div>
       </section>
