--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </div>
     </header>
     <main>
+      <!-- ------Hero------ -->
       <section class="hero">
         <video autoplay muted loop>
           <source
@@ -52,11 +53,9 @@
         </video>
         <div class="container hero-container">
           <div class="hero-text-content">
-            <div class="heading-wrap">
-              <h1 class="hero-title">Slip din indre artist</h1>
-              <div class="hero-heading-line"></div>
-            </div>
-            <h2>på vårt koselige sted</h2>
+            <h1 class="hero-title">
+              Slip din <span>indre artist</span> på vårt koselige sted
+            </h1>
           </div>
           <a class="hero-link" href="#">Se katalog</a>
         </div>
