--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="header-menu-link" href="">Hjemme</a>
             </li>
             <li class="header-menu-item">
-              <a class="header-menu-link" href="">Hvordan det fungerer</a>
+              <a class="header-menu-link" href="">Om oss</a>
             </li>
             <li class="header-menu-item">
               <a class="header-menu-link" href="">Galeri</a>
@@ -61,7 +61,7 @@
         </div>
       </section>
       <section class="works">
-        <div class="container works-container">
+        <!-- <div class="container works-container">
           <div class="works-left">
             <div class="works-overlay-left">
               <img src="./img/photo_2025-02-19_17-46-38-3.jpg" alt="Painting" />
@@ -95,8 +95,10 @@
             </div>
             <a class="works-link" href="#">Galeri</a>
           </div>
-        </div>
+        </div> -->
       </section>
+      <section class="commende"></section>
+      <section class="ware"></section>
     </main>
     <footer class="footer"></footer>
     <script type="module" src="./js/task-1.js"></script>
