--- a/index.html
+++ b/index.html
@@ -97,7 +97,67 @@
           </div>
         </div> -->
       </section>
-      <section class="commende"></section>
+      <section class="events">
+        <div class="container">
+          <h2 class="section-title">Kommende arrangementer</h2>
+          <div class="content-container">
+            <div class="events-container">
+              <div class="event">
+                <div class="first-event">
+                  <img
+                    class="event-image"
+                    src="./img/photo_2025-02-19_17-28-58-1.jpg"
+                    alt="Illustration for first event"
+                    width="240"
+                    height="240"
+                  />
+                  <h3 class="event-subtitle">Vinter søndag økt</h3>
+                  <p class="event-text">
+                    Hver søndag 11 30 Bli med på et lat søndag keramikkmaleri
+                  </p>
+                </div>
+                <div class="second-event visually-hidden">
+                  <img
+                    class="event-image"
+                    src="./img/photo_2025-02-19_20-02-17.jpg"
+                    alt="Illustration for second event"
+                    width="240"
+                    height="240"
+                  />
+                  <h3 class="event-subtitle">Onsdag kunst date</h3>
+                  <p class="event-text">kr300 per person 17.00 og utover</p>
+                </div>
+                <div class="third-event visually-hidden">
+                  <img
+                    class="event-image"
+                    src="./img/photo_2025-02-19_20-10-15.jpg"
+                    alt="Illustration for third event"
+                    width="240"
+                    height="240"
+                  />
+                  <h3 class="event-subtitle">Lorem, ipsum dolor.</h3>
+                  <p class="event-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quos placeat magni quam reiciendis debitis quo, vel
+                    eligendi? Soluta, excepturi earum?
+                  </p>
+                </div>
+              </div>
+              <div class="btn-container">
+                <button class="events-btn" data-target="first-event-button">
+                  1
+                </button>
+                <button class="events-btn" data-target="second-event-button">
+                  2
+                </button>
+                <button class="events-btn" data-target="third-event-button">
+                  3
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="ware"></section>
     </main>
     <footer class="footer"></footer>
