--- a/index.html
+++ b/index.html
@@ -60,50 +60,54 @@
           <a class="hero-link" href="#">Se katalog</a>
         </div>
       </section>
+
+      <!-- -------------------WORKS----------------- -->
       <section class="works">
-        <!-- <div class="container works-container">
-          <div class="works-left">
-            <div class="works-overlay-left">
-              <img src="./img/photo_2025-02-19_17-46-38-3.jpg" alt="Painting" />
-              <div class="works-text-wrap">
-                <h3 class="works-title">Unik kreativ opplevelse</h3>
-                <p class="works-text">
-                  Vi ønsker å tilby en opplevelse som fremmer tilknytning og
-                  kreativitet. En aktivitet som oppmuntrer til kvalitetstid
-                  gjennom kreativ utforskning. Vårt fokus er å løfte, styrke og
-                  utdanne de som jobber med oss ​​til å strebe etter ikke annet
-                  enn fortreffelighet i service og levering. Vår visjon er å
-                  være best på kundeopplevelser.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="works-right">
-            <div class="works-overlay-right">
-              <img src="./img/photo_2025-02-19_17-28-58-1.jpg" alt="Painting" />
-              <div class="works-text-wrap">
-                <h3 class="works-title">Familievennlig keramikkmaleri</h3>
-                <p class="works-text">
-                  Nyt keramikkmaling og kreative øyeblikk på Artkafe Artkafe
-                  kombinerer kunst og godt selskap for å skape unike kreative
-                  øyeblikk som får alle til å snakke og komme tilbake for mer.
-                  Velg mellom 50 + allerede laget gjenstander å male og
-                  dekorere. Len deg tilbake og nyt te og kaffe mens du maler med
-                  familie og venner.
-                </p>
-              </div>
-            </div>
-            <a class="works-link" href="#">Galeri</a>
-          </div>
-        </div> -->
+        <div class="container works-container">
+          <h2 class="section-title">Lorem ipsum dolor sit.</h2>
+          <ul class="works-list">
+            <li class="works-item">
+              <h3 class="works-subtitle">Unik kreativ opplevelse</h3>
+              <p class="works-text">
+                Vi ønsker å tilby en opplevelse som fremmer tilknytning og
+                kreativitet. En aktivitet som oppmuntrer til kvalitetstid
+                gjennom kreativ utforskning. Vårt fokus er å løfte, styrke og
+                utdanne de som jobber med oss ​​til å strebe etter ikke annet
+                enn fortreffelighet i service og levering. Vår visjon er å være
+                best på kundeopplevelser.
+              </p>
+            </li>
+            <li class="works-item">
+              <h3 class="works-subtitle">Familievennlig keramikkmaleri</h3>
+              <p class="works-text">
+                Nyt keramikkmaling og kreative øyeblikk på Artkafe Artkafe
+                kombinerer kunst og godt selskap for å skape unike kreative
+                øyeblikk som får alle til å snakke og komme tilbake for mer.
+                Velg mellom 50 + allerede laget gjenstander å male og dekorere.
+                Len deg tilbake og nyt te og kaffe mens du maler med familie og
+                venner.
+              </p>
+            </li>
+            <li class="works-item">
+              <h3 class="works-subtitle">Lorem, ipsum.</h3>
+              <p class="works-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                necessitatibus pariatur accusamus repellendus alias harum
+                perspiciatis, ipsam aliquid voluptatem ut iste obcaecati eaque
+                laborum sint amet earum numquam repudiandae vel? Nemo eius
+                dolores quae eligendi! Illo, fuga. Laboriosam, doloribus neque.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="events">
         <div class="container">
           <h2 class="section-title">Kommende arrangementer</h2>
           <div class="content-container">
             <div class="events-container">
-              <div class="event">
-                <div class="first-event">
+              <div class="all-events">
+                <div class="event first-event">
                   <img
                     class="event-image"
                     src="./img/photo_2025-02-19_17-28-58-1.jpg"
@@ -116,7 +120,7 @@
                     Hver søndag 11 30 Bli med på et lat søndag keramikkmaleri
                   </p>
                 </div>
-                <div class="second-event visually-hidden">
+                <div class="event second-event visually-hidden">
                   <img
                     class="event-image"
                     src="./img/photo_2025-02-19_20-02-17.jpg"
@@ -127,7 +131,7 @@
                   <h3 class="event-subtitle">Onsdag kunst date</h3>
                   <p class="event-text">kr300 per person 17.00 og utover</p>
                 </div>
-                <div class="third-event visually-hidden">
+                <div class="event third-event visually-hidden">
                   <img
                     class="event-image"
                     src="./img/photo_2025-02-19_20-10-15.jpg"
@@ -144,13 +148,16 @@
                 </div>
               </div>
               <div class="btn-container">
-                <button class="events-btn" data-target="first-event-button">
+                <button class="events-btn is-active" data-target="first-event">
                   1
                 </button>
-                <button class="events-btn" data-target="second-event-button">
+                <button
+                  class="events-btn not-active"
+                  data-target="second-event"
+                >
                   2
                 </button>
-                <button class="events-btn" data-target="third-event-button">
+                <button class="events-btn not-active" data-target="third-event">
                   3
                 </button>
               </div>
@@ -161,6 +168,6 @@
       <section class="ware"></section>
     </main>
     <footer class="footer"></footer>
-    <script type="module" src="./js/task-1.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
